fixed hovers; flip cards dont work on mobile

--- a/src/components/folder.css
+++ b/src/components/folder.css
@@ -146,13 +146,13 @@
   border-radius: 50%;
 }
 
-@media (hover: hover) and (pointer: fine) {
+/* @media (hover: hover) and (pointer: fine) {
   .hover-container:hover .overlay {
     opacity: 1;
   }
-}
+} */
 
-.hover-container:active .overlay {
+.hover-container:hover .overlay {
   opacity: 1;
 }
 
